# Teal_FYP_db

./: .gitignore  create_database.bat  main.py  pyproject.toml  run_dashboard.bat  tables.xlsx  test.bat
app/: __init__.py  create_refesh_token.py  dashboard_functions.py  main.py
app/routes/: dashboard_routes.py  report_upload_routes.py
app/static/: assist.css  custom.css  dumb.css  landing.css  styles.css
app/templates/: assist.html  custom.html  dumb.html  index.html  landing.html  report_upload.html
data/: create_database.py  create_query_db.py  placeholder.txt  saved_queries.db  test.db  update_table.py
data/sql/: tsm_query_saved_queries.sql  tsm_warehouse_asset_dim.sql  tsm_warehouse_date_dim.sql  tsm_warehouse_inspector_dim.sql  tsm_warehouse_location_dim.sql  tsm_warehouse_report_fact.sql  tsm_warehouse_supervisor_dim.sql  tsm_warehouse_time_dim.sql
etl/: create_database.py  create_query_db.py  dummy_report_creator.py  dummy_report_creator_pdf.py  location_dim_insert_generator.py  test.py
etl/extraction/: batch_splitter.py  extractor.py  form_input.py  text_extractor.py
etl/load/: loader.py  row_loader.py
etl/misc/: cood_finder_pdf.py  dummy_report_creator.py
etl/tests/: unit_test.py
etl/transformation/: db_input.py  row_transformer.py  transformer.py
others/: report_batch.csv  report_batch_2.csv
others/misc/: dummy_report_batch.csv  location_dim_insert_data_llm_prompt.txt  report_batch_2.csv
others/sql/: categorical_dim_insertion.sql  date_time_dim_insertion.sql  date_time_table_insertion.sql  table_creation.sql  table_deletion.sql  (+1 more)
