[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.3.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pymupdf>=1.25.5",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]
